@@ -16,3 +16,4 @@
 ## Removed Legacy Features
 * It is no longer possible to upgrade from across.res to elma.res
 * Readme.txt is no longer autogenerated
+* noretrac.inf (software backbuffer) is no longer supported
